# statementanalyzer

./: .gitignore  README.md  app.py  pyproject.toml  redis_conn.py  render.yaml  requirements.txt  tasks.py  worker.py
analyzer/: __init__.py  analyzer.py  auxilliary.py  data_extraction.py  processors.py  registry.py  router.py
analyzer/processor/: base.py  fidelity.py  generic.py  kuda.py  moniepoint.py  moniepoint_v2.py  opay.py  palmpay.py  premium.py  sterling.py  taj.py  wema.py  zenith.py
static/css/: styles.css  summary.css
static/js/: processing.js  validate.js
templates/: after.html  index.html  processing.html
