[project]
name = "statementanalyzer"
version = "0.1.0"
description = "This helps you extract key metrics such as month-on-month inflow and flow, risk metrics, etc from a bank statement either in pdf or json"
readme = "README.md"
authors = [
  { name="Aderoju", 
  email="rojuadeyemi@yahoo.com"},
]
license = {text = "MIT"}
dependencies = [
  "pandas",
  "numpy",
  "pdfplumber"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
